2008-03-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm, src/kahua/protocol/http.scm
	  Fix that domain cookie attribute was specified unnecessarily.
	  It causes that web browser reject the cookie when request
	  host name contain no ".".  This cookie problem was reported by
	  Kristof Bastiaensen at first,  and was pointed out by
	  Shiro Kawai more clearly.

2008-03-04  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: plugin/dsl-simple.scm
	          add components below.
	          readpass/,fileref/,check/,check-set/,radio-set/,
	          dropdown/ and multisel/.
	          And included these each component by label.
	
2008-03-03  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: src/kahua/server.scm
	          when parts-cont is called, redirect to the page.
	          The aim is to remove x-kahua-client-context query string
	          from url(when a/cont is clicked with keep clause,
	          javascript append x-kahua-client-context query string
	          to raw continuation url).
	* Add: plugins/dsl-simple.scm
	       This plugin is experimental implementation for DSL on Web App.
	       The aim is just 80% cover to quick build web site.
	
2008-03-02  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: Refactoring code at prepare.
	          If keep clause exists and head tag not found,
	          insert head tag and javascirpt.
	* Fix: Bug for Auto Bind client side data.
	       When input tag has no type attr,
	       then lost value.
	* Fix: bug fix reported by Koguro.
	
2008-03-01  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: Some bugs typo and so on.
	       These are all reported by Koguro.
	* Fix: When first access, then x-kahua-client-context can't set #t.
	       So, at the time, javascript couldn't insert head tag.
	       For fix the bug, introduce prepare procedure before interp.
	* Change: keep clause can get #f which mean as no keep/collect.
	* Change: doc/Modules/kahua.elem.ja